[package]
name = "native_tls_connection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "macros"] }
fe2o3-amqp = { features = ["native-tls"], path = "../../fe2o3-amqp" }
native-tls = "0.2.10"
tokio-native-tls = "0.3.0"