[package]
name = "rustls_connection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "macros"] }
fe2o3-amqp = { features = ["rustls"], path = "../../fe2o3-amqp" }
rustls = "0.22"
tokio-rustls = "0.25"
webpki-roots = "0.26"