[package]
name = "service_bus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "dlq",
    "management"
]

dlq = ["fe2o3-amqp/transaction"]
management = ["fe2o3-amqp-management"]

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "macros"] }
tokio-rustls = "0.23"
rustls = "0.20"
webpki-roots = "0.22.4"
fe2o3-amqp = { path = "../../fe2o3-amqp", features = ["rustls"] }
uuid = { version = "1", features = ["v4"] }

# Optional deps
fe2o3-amqp-management = { path = "../../fe2o3-amqp-management", optional = true }

[[bin]]
name = "queue_dlq"
path = "src/bin/queue_dlq.rs"
required-features = ["dlq"]

[[bin]]
name = "management"
path = "src/bin/management.rs"
required-features = ["management"]