[package]
name = "service_bus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    # "dlq",
    # "cbs",
]

dlq = ["fe2o3-amqp/transaction"]
cbs = ["urlencoding", "sha2", "hmac", "base64", "fe2o3-amqp-cbs"]

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "macros"] }
tokio-rustls = "0.23"
rustls = "0.20"
webpki-roots = "0.22.4"
fe2o3-amqp = { path = "../../fe2o3-amqp", features = ["rustls"] }
# fe2o3-amqp = { version = "0.6.7", features = ["rustls"] }
uuid = { version = "1", features = ["v4"] }

urlencoding = { version = "2.1.2", optional = true }
sha2 = { version = "0.10.6", optional = true }
hmac = { version = "0.12.1", optional = true }
base64 = { version = "0.13.0", optional = true }
fe2o3-amqp-cbs = { path = "../../fe2o3-amqp-cbs", optional = true }

[[bin]]
name = "queue_dlq"
path = "src/bin/queue_dlq.rs"
required-features = ["dlq"]

[[bin]]
name = "cbs"
path = "src/bin/cbs.rs"
required-features = ["cbs"]
