[package]
name = "service_bus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    # "dlq",
    # "cbs",
    "management",
]

dlq = ["fe2o3-amqp/transaction"]
cbs = ["urlencoding", "sha2", "hmac", "base64", "fe2o3-amqp-cbs"]
management = ["fe2o3-amqp-management"]

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "macros"] }
tokio-rustls = "0.26.0"
rustls = "0.23.12"
webpki-roots = "0.26.3"
fe2o3-amqp = { path = "../../fe2o3-amqp", features = ["rustls"] }
uuid = { version = "1", features = ["v4"] }
serde_amqp = { path = "../../serde_amqp" }

urlencoding = { version = "2.1.2", optional = true }
sha2 = { version = "0.10.6", optional = true }
hmac = { version = "0.12.1", optional = true }
base64 = { version = "0.22.1", optional = true }
fe2o3-amqp-cbs = { path = "../../fe2o3-amqp-cbs", optional = true }
fe2o3-amqp-management = { path = "../../fe2o3-amqp-management", optional = true }

[[bin]]
name = "queue_dlq"
path = "src/bin/queue_dlq.rs"
required-features = ["dlq"]

[[bin]]
name = "cbs"
path = "src/bin/cbs.rs"
required-features = ["cbs"]
