[package]
name = "service_bus_over_websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "macros"] }
fe2o3-amqp = { path = "../../fe2o3-amqp" }
fe2o3-amqp-ws = { path = "../../fe2o3-amqp-ws", features = ["rustls-tls-webpki-roots"] }
rustls = "0.23"