[package]
name = "tls_sasl_connection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

rustls = ["fe2o3-amqp/rustls"]
native-tls = ["fe2o3-amqp/native-tls"]

[dependencies]
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "macros"] }
fe2o3-amqp = { features = ["rustls"], path = "../../fe2o3-amqp" }
rustls = "0.21"
tokio-rustls = "0.24"
webpki-roots = "0.23"