[package]
name = "wasm32_in_browser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1.7"
tokio = { version = "1.23.0", features = ["rt", "io-util"] }
fe2o3-amqp-ws = { path = "../../fe2o3-amqp-ws" }
fe2o3-amqp = { path = "../../fe2o3-amqp" }
parking_lot = { version = "0.11", features = ["send_guard", "wasm-bindgen"] }